<resources>
    <string name="app_name">Lista</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="uam">Lista UAM</string>
    <string name="Azc">Azcapotzalco</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">e-mail</string>
    <string name="pass">Contraseña</string>
    <string name="title_activity_home">Home</string>
</resources>
