<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/uam"
        android:background="@color/rojo1"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:id="@+id/tv_uam"
        android:textSize="28dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Azc"
        android:textStyle="bold"
        android:background="@color/rojo2"
        android:textColor="@color/blanco"
        android:id="@+id/textView2"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="10dp"
        android:text="@string/nombre"
        android:textStyle="bold"
        android:id="@+id/tv_nombre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:padding="10dp"
        android:ems="10"
        android:id="@+id/et_nombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="10dp"
        android:text="@string/apellido"
        android:textStyle="bold"
        android:id="@+id/tv_apellido" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:padding="10dp"
        android:ems="10"
        android:id="@+id/et_apellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="10dp"
        android:text="@string/correo"
        android:textStyle="bold"
        android:id="@+id/tv_correo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:padding="10dp"
        android:ems="10"
        android:id="@+id/et_correo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="10dp"
        android:text="@string/pass"
        android:textStyle="bold"
        android:id="@+id/tv_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:id="@+id/btn_enviar"
        android:layout_gravity="center_horizontal"
        android:background="#ff372c"
        android:textColor="#ffffff" />


</LinearLayout>
